[build-system]
requires = ["setuptools>=42", "wheel", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["streamlitissues"]

[project]
name = "streamlitissues"
version = "0.1.0"
description = "A project for processing Streamlit issues"
authors = [
    { name = "Siavash Yasini" }
]
dependencies = [
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "snowflake-connector-python==3.12.4",
    "snowflake-snowpark-python==1.26.0",
    "snowflake.core==1.0.2",
    "streamlit==1.41.1",
]

[tool.poetry]
name = "streamlitissues"
version = "0.1.0"
description = "A project for processing Streamlit issues"
authors = ["Siavash Yasini"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "2.2.3"
tqdm = "4.67.1"
snowflake-connector-python = "3.12.4"
snowflake-snowpark-python = "1.26.0"
snowflake.core = "1.0.2"
streamlit = "1.41.1"
